apps/wiki/wikijs-Namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: wiki
  labels:
    app-name: wikijs
    version: "${WIKIJS_VERSION}"
    component: project-management-tool
    hostNetwork: "no"
    internal-service: "yes"
    managed-by: chynten
    created-by: chynten
