apps/wiki/wikijs-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs-svc
  namespace: wiki
  labels:
    app-name: wikijs
    version: "${WIKIJS_VERSION}"
    component: project-management-tool
    hostNetwork: "no"
    internal-service: "yes"
    managed-by: chynten
    created-by: chynten
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: tcp
  selector:
    app-name: wikijs
